data/derived/comb/progs/unify/prog6700.ml.out
Characters 15-20:
  let _ =bigAdd [1,0,1] [1,2];;
                 ^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type int
